apps/ntfy/base/ingress/ingress.yaml
---
# TLS via Let's Encrypt DNS-01 challenge
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/hostname: ntfy.example.com
    external-dns.alpha.kubernetes.io/target: <internal-ip>
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ntfy.example.com
      secretName: wildcard-tls
  rules:
    - host: ntfy.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  name: http
